<resources>
    <string name="app_name">Teaching app</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="preference">Pref</string>
    <string name="name_min_20caracter">Name</string>
    <string name="email_address">Email</string>
    <string name="delivery_address" />
    <string name="location">Location</string>
    <string name="passwoard_min_4chararcter">Password(Min 5 digit)</string>
    <string name="confirmpasswpord">Confirm Password</string>
    <string name="home">HOME</string>
    <string name="log_out">LOG OUT</string>
    <string name="faqs">FAQS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="design_by_shivamverma">Design by Shivamverma</string>
    <string name="elearning">ELearning</string>
    <string name="motivetional_video">Motivetional Video</string>
    <string name="q4_will_you_modify_this_app_in_future">Q4.Will you modify this app in future?</string>
    <string name="ans_yes">Ans.yes!</string>
    <string name="q5_is_this_app_authentication_working_properly">Q5.Is this app authentication working properly?</string>
    <string name="ans_maybe_i_ll_do">Ans. Maybe i\'ll do!</string>
    <string name="ans_yes_i_made_this_app_for_project_purpose">Ans. yes i made this app for project purpose.</string>
    <string name="q3_is_this_app_made_for_only_project_purpose">Q3. Is this app made for only project purpose?</string>
    <string name="ans_yse_but_not_from_this_app_you_just_go_these_youtube_chennal">Ans. yse but not from this app you just go these youtube chennal</string>
    <string name="q2_can_i_acsess_complete_course">Q2.Can i acsess complete course?</string>
    <string name="s">Ans.Yes</string>
    <string name="q1_are_these_class_belong_a_youtube">Q1.Are these class belong a youtube?</string>


</resources>

